# ai-chat-util

./: .env.example  .env_template  Dockerfile  README.md  README_FOR_EXPERTS.md  ai-chat-util-config-old.yml  ai-chat-util-config.yml  ai-chat-util-config_old.yml  autonomous-agent-util-config.yml  config.example.yml  docker-compose.yml  done.txt  pyproject.toml  requirements.txt  sample_cline_mcp_settings.json
app/: ai-chat-util-config.yml  ai-chat-util-mcp.json  pyproject.toml  sample_cline_mcp_settings.json
app/src/ai_chat_util/: __init__.py  analysis.py
app/src/ai_chat_util/_test_/: test_analysis_entrypoints.py  test_coordinator_entrypoints.py  test_deepagent_entrypoints.py  test_workflow_backend_entrypoints.py
app/src/ai_chat_util/ai_chat_util_agent/: __init__.py  agent_util_models.py
app/src/ai_chat_util/ai_chat_util_agent/core/: __init__.py  agent_batch_client.py  agent_client.py  agent_client_factory.py  app.py  resource_app.py  supervisor_support.py  tool_app.py  tool_limits.py
app/src/ai_chat_util/ai_chat_util_agent/hitl/: __init__.py  hitl_client.py
app/src/ai_chat_util/ai_chat_util_base/: __init__.py  ai_chat_util_models.py  analysis_service.py  batch.py  resource_app.py
app/src/ai_chat_util/ai_chat_util_base/agent/: agent_client.py  agent_client_factory.py
app/src/ai_chat_util/ai_chat_util_base/analyze_file_util/: analyze_file.py  analyze_log.py  analyze_pdf.py
app/src/ai_chat_util/ai_chat_util_base/chat/: __init__.py  abstract_batch_client.py  abstract_chat_client.py  analysis_service.py  batch_client.py  batch_client_base.py  chat_client.py  chat_client_base.py  llm_client_util.py  llm_message_content_factory.py
app/src/ai_chat_util/ai_chat_util_base/core/: analysis_service.py  resource_app.py
app/src/ai_chat_util/ai_chat_util_workflow/: __init__.py  __main__.py  chat_client.py  session_store.py
app/src/ai_chat_util/ai_chat_util_workflow/_test_/: test_langgraph_workflow.py
app/src/ai_chat_util/ai_chat_util_workflow/mermaid/: __init__.py  mermaid_flowchart.py
app/src/ai_chat_util/ai_chat_util_workflow/samples/: sample1.py  sample2.py
app/src/ai_chat_util/ai_chat_util_workflow/workflow/: __init__.py  langgraph_builder.py  markdown_workflow.py  mermaid_models.py  runner.py
app/src/ai_chat_util/analysis/: __init__.py  analysis_service.py  llm_client_util.py
app/src/ai_chat_util/api/: api_server.py
app/src/ai_chat_util/app/agent/: agent_util_models.py
app/src/ai_chat_util/app/ai_chat_util_agent/: agent_util_models.py
app/src/ai_chat_util/app/ai_chat_util_workflow/: __init__.py  chat_client.py
app/src/ai_chat_util/app/workflow/: __init__.py  __main__.py  chat_client.py  session_store.py
app/src/ai_chat_util/base/agent/: __init__.py  agent_batch_client.py  agent_builder.py  agent_client.py  agent_client_factory.py  agent_client_util.py  deep_agent_support.py  llm_mcp_client.py  mcp_client.py  mcp_client_util.py  prompts.py  tool_limits.py
app/src/ai_chat_util/base/batch/: __init__.py  batch_client.py  batch_client_base.py
app/src/ai_chat_util/base/chat/: batch_client_base.py  llm_message_content_factory.py
app/src/ai_chat_util/base/core/: app.py  resource_app.py  tool_app.py
app/src/ai_chat_util/base/hitl/: __init__.py  hitl_client.py
app/src/ai_chat_util/base/llm/: abstract_llm_client.py  agent.py  (+10 more)
app/src/ai_chat_util/cli/: __main__.py
app/src/ai_chat_util/common/: __init__.py
app/src/ai_chat_util/core/: __init__.py  analysis_service.py  app.py  resource_app.py  tool_app.py
app/src/ai_chat_util/log/: log_settings.py
app/src/ai_chat_util/mcp/: mcp_server.py
app/src/ai_chat_util/test/: simple_batch_chat.py  simple_batch_chat_from_excel.py  simple_chat.py  simple_file_analysis.py  simple_image_analysis.py  simple_office_analysis.py  simple_pdf_analysis.py
app/src/ai_chat_util/workflow/: __init__.py  __main__.py  chat_client.py
app/src/ai_chat_util_base/config/: __init__.py  ai_chat_util_mcp_config.py  config_util.py  runtime.py
app/src/ai_chat_util_base/model/: agent_util_models.py  request_headers.py
app/src/coding_agent_util/: __init__.py
app/src/coding_agent_util/_api_/: __init__.py  api_server.py
app/src/coding_agent_util/_cli_/: __init__.py  docker_main.py
app/src/coding_agent_util/_test_/: __init__.py  mcp_client.py  test_api_contract_integration.py  test_endpoint_section.py  test_logging_redaction.py  test_mcp_tool_contract.py  test_process_backend_variants.py  test_request_headers_contract.py  test_windows_shim_prompt_wrapping.py  test_workspace_path_rewrite.py
app/src/coding_agent_util/core/: __init__.py  abstract_actions.py  abstract_agent_runner.py  abstract_endpoint.py  endpoint.py  task_manager.py  task_service_factory.py
app/src/coding_agent_util/mcp/: __init__.py  mcp_server.py
app/src/file_util/_test_/: test_file_path_resolver.py  test_file_server_api.py
app/src/file_util/api/: __init__.py  api_server.py
app/src/file_util/config/: __init__.py
app/src/file_util/core/: app.py
app/src/file_util/mcp/: mcp_server.py
app/src/file_util/model/: __init__.py
app/src/file_util/util/: __init__.py  file_path_resolver.py  file_server_util.py  office2pdf.py  pdf_util.py
(+471 files in other folders)
