[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chat_util"
version = "0.1.10"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
requires-python = ">=3.11,<=3.13"

dependencies = [
    "python-dotenv",
    "pydantic",
    "PyYAML",
    "pandas",
    "openpyxl",
    "litellm",
    "openai",
    "tiktoken",
    "boto3",
    "anthropic",
    "google-generativeai",
    "langchain",
    "langgraph-supervisor",
    "langchain-litellm",
    "langchain-mcp-adapters",
    "aiosqlite",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "fastmcp",
    "fastapi",
    "PyMuPDF",
    "python_on_whales",
    "tabulate",
    "pytest",
    "file_util @ git+https://github.com/knd3dayo/file-util.git@main"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-chat-util = "ai_chat_util.cli.__main__:cli_main"
