[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chat_util"
version = "0.1.11"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
requires-python = ">=3.11,<=3.13"

dependencies = [
    "python-dotenv",
    "pydantic",
    "PyYAML",
    "pandas",
    "openpyxl",
    "litellm",
    "openai",
    "tiktoken",
    "boto3",
    "anthropic",
    "google-generativeai",
    "langchain",
    "langgraph-supervisor",
    "langchain-litellm",
    "langchain-mcp-adapters",
    "aiosqlite",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "fastmcp",
    "fastapi",
    "PyMuPDF",
    "python_on_whales",
    "tabulate",
    "pytest",
    "magika",
    "pillow",
    "python-docx",
    "python-pptx",
    "markdown",
    "pdfminer.six",
    "beautifulsoup4",
    "chardet==5.2.0",
    "aiofiles",
    "pyzipper",
    "pysmb"
]

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.5.0a2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-chat-util = "ai_chat_util.cli.__main__:cli_main"
coding-agent-api = "coding_agent_util._api_.api_server:main"
coding-agent-mcp = "coding_agent_util.mcp.mcp_server:main"
coding-agent-util = "coding_agent_util._cli_.main:main"
